--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import { About } from '@/components/about';
 import { Footer } from '@/components/footer';
 ---
 
-<Layout title="Moodist: Ambient Sounds for Focus and Calm">
+<Layout title="Chill: Relax & Sleep">
   <Donate />
   <Hero />
   <App client:load />
