--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -8,10 +8,10 @@ interface Props {
   title?: string;
 }
 
-const title = Astro.props.title || 'Moodist: Ambient Sounds for Focus and Calm';
+const title = Astro.props.title || 'Chill: Relax, Focus, Sleep';
 const description =
   Astro.props.description ||
-  `Moodist is a free and open-source ambient sound generator featuring ${count()} carefully curated sounds. Create your ideal atmosphere for relaxation, focus, or creativity with this versatile tool.`;
+  `Chill is your ultimate sanctuary for crafting the perfect ambiance to unwind, focus, or spark your creativity.`;
 ---
 
 <!doctype html>
