--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -29,10 +29,10 @@ const description =
 
     <meta content={title} property="og:title" />
     <meta content={description} property="og:description" />
-    <meta content="Moodist" property="og:site_name" />
-    <meta content="https://moodist.app" property="og:url" />
+    <meta content="Chill" property="og:site_name" />
+    <meta content="https://webchill.fayhe.fr" property="og:url" />
     <meta content="website" property="og:type" />
-    <meta content="https://moodist.app/og.png" property="og:image" />
+    <meta content="https://webchill.fayhe.fr/og.png" property="og:image" />
 
     <meta content="summary_large_image" name="twitter:card" />
   </head>
