--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -30,7 +30,7 @@ const description =
     <meta content={title} property="og:title" />
     <meta content={description} property="og:description" />
     <meta content="Chill" property="og:site_name" />
-    <meta content="https://webchill.fayhe.fr" property="og:url" />
+    <meta content="https://app.chillrelaxandsleep.com" property="og:url" />
     <meta content="website" property="og:type" />
     <meta content="https://webchill.fayhe.fr/og.png" property="og:image" />
 
